--- a/simple-crm-cli/src/app/customer/customer-list-page/customer-list-page.component.html
+++ b/simple-crm-cli/src/app/customer/customer-list-page/customer-list-page.component.html
@@ -1,1 +1,32 @@
-<p>customer-list-page works!</p>
+<mat-card>
+  <table mat-table [dataSource]="dataSource">
+    <ng-container matColumnDef="name">
+      <!-- The matColumnDef value above must match a name in the displayColumns array  -->
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let customer"> {{customer.firstName}} {{customer.lastName}} </td>
+    </ng-container>
+    <ng-container matColumnDef="phoneNumber">
+      <!-- The matColumnDef value above must match a name in the displayColumns array  -->
+      <th mat-header-cell *matHeaderCellDef> Phone </th>
+      <td mat-cell *matCellDef="let customer"> {{customer.phoneNumber}} </td>
+    </ng-container>
+    <ng-container matColumnDef="emailAddress">
+      <!-- The matColumnDef value above must match a name in the displayColumns array  -->
+      <th mat-header-cell *matHeaderCellDef> Email </th>
+      <td mat-cell *matCellDef="let customer"> {{customer.emailAddress}} </td>
+    </ng-container>
+    <ng-container matColumnDef="status">
+      <!-- The matColumnDef value above must match a name in the displayColumns array  -->
+      <th mat-header-cell *matHeaderCellDef> Status </th>
+      <td mat-cell *matCellDef="let customer"> {{customer.status}} </td>
+    </ng-container>
+    <ng-container matColumnDef="type">
+      <!-- The matColumnDef value above must match a name in the displayColumns array  -->
+      <th mat-header-cell *matHeaderCellDef> Type </th>
+      <td mat-cell *matCellDef="let customer"> {{customer.type}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayColumns;"></tr>
+  </table>
+</mat-card>
