--- a/simple-crm-cli/src/app/customer/customer-list-page/customer-list-page.component.html
+++ b/simple-crm-cli/src/app/customer/customer-list-page/customer-list-page.component.html
@@ -2,7 +2,7 @@
   <mat-card-title fxLayout="row" fxLayoutAlign="space-between center" >
     <span>Customers</span>
     <span fxFlex> </span>
-    <button mat-mini-fab color="primary">
+    <button mat-mini-fab color="primary" (click)="addCustomer()">
       <mat-icon aria-label="Add Customer">add</mat-icon>
     </button>
   </mat-card-title>
