--- a/simple-crm-cli/src/app/customer/customer-create-dialog/customer-create-dialog.component.html
+++ b/simple-crm-cli/src/app/customer/customer-create-dialog/customer-create-dialog.component.html
@@ -1,7 +1,29 @@
 <mat-dialog-content>
-  <p>
-    customer-create-dialog-works
-  </p>
+  <form [formGroup]="detailForm" novalidate>
+    <mat-form-field>
+      <mat-label>First Name</mat-label>
+      <input matInput formControlName="firstName" name="firstName">
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Last Name</mat-label>
+      <input matInput formControlName="lastName" name="lastName">
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Phone Number</mat-label>
+      <input matInput formControlName="phoneNumber" name="phoneNumber">
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Email Address</mat-label>
+      <input matInput #emailAddress formControlName="emailAddress" name="emailAddress">
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Contact Method</mat-label>
+      <mat-select formControlName="preferredContactMethod" name="preferredContactMethod">
+        <mat-option value="email">Email</mat-option>
+        <mat-option value="phone">Phone</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </form>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button (click)="cancel()">Cancel</button>
