--- a/simple-crm-cli/src/app/customer/customer-list-page/customer-list-page.component.html
+++ b/simple-crm-cli/src/app/customer/customer-list-page/customer-list-page.component.html
@@ -8,6 +8,15 @@
   </mat-card-title>
 
   <table mat-table [dataSource]="dataSource">
+    <ng-container matColumnDef="actions">
+      <!-- The matColumnDef value above must match a name in the displayColumns array  -->
+      <th mat-header-cell *matHeaderCellDef> </th>
+      <td mat-cell *matCellDef="let customer">
+        <button mat-icon-button (click)="viewDetail(customer)">
+          <mat-icon>edit</mat-icon>
+        </button>
+      </td>
+    </ng-container>
     <ng-container matColumnDef="name">
       <!-- The matColumnDef value above must match a name in the displayColumns array  -->
       <th mat-header-cell *matHeaderCellDef> Name </th>
