--- a/simple-crm-cli/src/app/customer/customer-list-page/customer-list-page.component.html
+++ b/simple-crm-cli/src/app/customer/customer-list-page/customer-list-page.component.html
@@ -1,13 +1,23 @@
 <mat-card>
-  <mat-card-title fxLayout="row" fxLayoutAlign="space-between center">
+  <mat-card-title fxLayout>
     <span>Customers</span>
+  </mat-card-title>
+  <div fxLayoutAlign="start baseline">
+    <mat-form-field>
+      <mat-label>Filter</mat-label>
+      <input matInput [formControl]="filterInput">
+      <button mat-button matSuffix mat-icon-button *ngIf="filterInput.value"
+        aria-label="Clear" (click)="filterInput.setValue('')">
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-form-field>
+    <mat-icon *ngIf="!filterInput.value" matSuffix>filter_list</mat-icon>
     <span fxFlex> </span>
-    <button mat-mini-fab color="primary" (click)="addCustomer()">
+    <button class="addButton" mat-mini-fab (click)="addCustomer()">
       <mat-icon aria-label="Add Customer">add</mat-icon>
     </button>
-  </mat-card-title>
-
-  <table mat-table [dataSource]="dataSource">
+  </div>
+  <table mat-table [dataSource]="(customers$ | async) || []">
     <ng-container matColumnDef="actions">
       <!-- The matColumnDef value above must match a name in the displayColumns array  -->
       <th mat-header-cell *matHeaderCellDef> </th>
