--- a/simple-crm-cli/src/app/customer/customer-list-page/customer-list-page.component.html
+++ b/simple-crm-cli/src/app/customer/customer-list-page/customer-list-page.component.html
@@ -62,3 +62,5 @@
     <tr mat-row *matRowDef="let row; columns: displayColumns;"></tr>
   </table>
 </mat-card>
+
+<pre>{{customers$ | async | json}}</pre>
